tocs and end of ch.5 reordered

--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -12,13 +12,15 @@ title: 5. Exploration of the Formative Learning Design Process
 ---
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
-    -   [Research Questions - April
-        2024](#research-questions---april-2024)
+    -   [Research Questions April 2025](#research-questions-april-2025)
+    -   [Additional information to help
+        reviewers](#additional-information-to-help-reviewers)
     -   [Chapter Introduction](#chapter-introduction)
     -   [Vignette and broad analysis using an analysis of activity
         systems](#vignette-and-broad-analysis-using-an-analysis-of-activity-systems)
-    -   [Narrative exploration of
-        contradictions](#narrative-exploration-of-contradictions)
+    -   [Narrative exploration of key contradictions emerging in the
+        game-making learning
+        design](#narrative-exploration-of-key-contradictions-emerging-in-the-game-making-learning-design)
         -   [C1 - contradictions involving the use of game programming
             and asset authoring
             tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
@@ -27,14 +29,27 @@ title: 5. Exploration of the Formative Learning Design Process
         -   [C2 - Contradictions associated with project navigation and
             use of
             documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
-            -   [Forms of Documentation which addressed
-                contradictions](#forms-of-documentation-which-addressed-contradictions)
-            -   [Resolution of C2](#resolution-of-c2)
+            -   [The use of documentation to address
+                contradictions](#the-use-of-documentation-to-address-contradictions)
+                -   [Structuring instructional tutorial resources and
+                    code
+                    snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
         -   [C3 - Responding to tensions and barriers in cultural
             aspects of the game making
             activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
             -   [Social coding processes](#social-coding-processes)
+                -   [Use of side missions to encourage varied creative
+                    practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
+        -   [**Comparing to UMC, Microworlds & constructionist design
+            principles**](#comparing-to-umc-microworlds-constructionist-design-principles)
+        -   [**the potentially awesome impact of lifting the lid on
+            authentic
+            technologies**](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
+        -   [GDP as the germ cell of this
+            research](#gdp-as-the-germ-cell-of-this-research)
+        -   [Summary and link to next
+            chapter/s](#summary-and-link-to-next-chapters)
     -   [Parking Lot](#parking-lot)
         -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
             -   [MOVED LINK - Applying activity theory to surface
@@ -44,11 +59,13 @@ title: 5. Exploration of the Formative Learning Design Process
             -   [Notes from vignette](#notes-from-vignette)
             -   [Notes before C1](#notes-before-c1)
             -   [Dropped from Discussion](#dropped-from-discussion)
+        -   [Moved from Graphical Assets
+            above](#moved-from-graphical-assets-above)
+        -   [Removed from Docs - add to appendix
+            .tech](#removed-from-docs---add-to-appendix-.tech)
 
 
 # Exploration of the Formative Learning Design Process
-
-
 
 
 ## Research Questions April 2025
@@ -492,59 +509,12 @@ This chapter has explored the complexity of the interacting tools and documentat
 <!-- HAS IT?
 REVISIT RESEARCH QUESTIONS -->
 
-<!-- MOVE THE CONCLUSION
-Addressing the replicability of the research process, it is of value here to recap the previous chapters characterision of its nature as as open and risky, and requiring me to rapidly generate new tools in response. Certain factors mitigated against the incomplete design, namely a tenatious group of participants in P1, and my existing relationship with some participants built in previous encounters. The input of families as a responsive testing group and as detailed above, as active inputters to the evolving pedagogical approach was significant. As such, while this aspect is not extensively explored in this study, I propose there is significant potential in the input of home educating families as a consituant part in collaborative design based approaches to  uncover exisiting, situated repetoires in a way that can shape emergent practices in new learning expereiences. Specifically potential to can inform design  to produce tools and pedagogies aims which can help other facilitators seed productive community activity in other learning settings. I return to this subject in the conclusion of this thesis. -->
-
-<!-- I have designed, introduced and revised a technology based set of tools in a process aligned with broad definitions of DBR.   -->
-
-
-### New Discussion section
-
-
-#### Design patterns as intermediate constructs
-
-Design patterns in computing contexts are presented as a middle ground between abstract theories (e.g. computational thinking) and more concrete techniques. "Formulations that are too abstract will be impractical in real design use; those that are too specific will be difficult to re-use in new scenarios." [@dearden_pattern_2006, p. 20].
-Höök and Löwgren [@hook_strong_2012] illustrate this _midway_ concepts as heuristics or design patterns between concrete instances of products and more general theories e.g. constructivism [@stolterman_concept-driven_2010].
-
-
-As explored in Chapter 2, the work of Eriksson et al. [-@eriksson_using_2019, p.15], drawing on a framing design patterns as "intermediate-level concepts" between the detail of concrete implementation and more general theories [@hook_strong_2012], use gameplay design patterns with young people and used a curated collection of GDPs as a base for young people to input ideas for game redesign rather than as a base for computer coding.
-
-This research strand originates in the field of human-computer interaction [@eriksson_using_2019; @hook_strong_2012; @barendregt_intermediate-level_2018]; however, in most of these studies, the nature of the general theories is not clearly articulated.
-
-
-#### GDP as the germ cell of this research
-
-ON THE PROCESS OF THIS Study
-HOW THIS IS A USEFUL PRODUCT -> AS PER dbr
-HOW ALSO AN EMERGENT GERM CELL. An experiment, open ended.
-As such, the emergence of a collection GDPs was not known before the process of working with participants began. Uncertaintly in research. A quick reflection of its value. 
-
-The following section makes a parallel between the utility of germ cell concepts and so-called strong concepts or intermediate knowledge in design theory [@hook_strong_2012; @barendregt_intermediate-level_2018].
-
-MOVE
-Most specifically relevant to this section, is a structural feature (from research on design patterns), of the utility of a strongly coupled link between observable game features, a description of the design structure and resources to facilitate implementation in the target code environment.
-
-
-Sign post, Chapter 7 explores this aspect in relation to data on use of GDPs.
-
-MOVED UP FROM PRIOR DISCUSSION
-
-
-The process of rising to the concrete via a germ cell concept is a powerful analytical and developmental tool [-@engestrom_embodied_2012]. In seeking the germ cell, the researcher explores complex, messy concrete processes over time to discern overarching concerns that can be expressed as a prototypical abstract germ cell concept. For this learning design, the concept and pedagogy of working with game design patterns (GDPs) emerged not only as an object of activity on a more granular scope than is typical but also as a germ cell concept valuable to both participants and facilitators. I continue the analysis of the orienting practice of GDPs as a germ cell concept in the following chapter.
-
-In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stepwise, stage-based approach. Stepwise approaches introduce code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. While the initial use of GDPs in P1 was piecemeal, by P2, a more structured, stepwise approach had been implemented for participants as part of several guiding activities. GDPs were first identified through playing games in an activity adapted from Moveable Game Jams (ensure this is described or linked to) and were used as a list of features serving as a mediating planning tool. In P2, GDPs were incorporated as affordances into a starter game template, initially highlighted via facilitator interaction and later as the guiding principle of _quick start cards_ to scaffold modifications to the code template. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation. In line with understandings of DBR research outputs, the identification and use of these patterns as research findings would be expressed as a set of "tentative generalisations" in the form of design heuristics drawn from the analysis of concrete practices [@hoadley_design-based_2022, p.215].
-
-
-
-
-### Previous Discussion Chapter 5
-
 
 The emergent and mutual nature of this design process aligns with both DBR and CHAT principles. In this chapter and the previous one, I have described my active role in motivating and supporting an emerging community through iterative phases. The design approach was open and risky, requiring me to rapidly generate new tools in response to changing needs. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the incomplete design. The concept of affordances, commonly used in DBR, is present in this design through the careful selection of technical tools and non-technical pedagogical strategies. The term affordances has also been extensively explored in the literature of human-computer interaction (HCI) from a CHAT perspective, defined as “possibilities for human actions mediated by cultural means” [@kaptelinin_affordances_2012, p.927]. In 3GAT terminology, the affordances of my design can be framed as a series of secondary stimuli. Sannino [@sannino_principle_2015] highlights the intersection of the use of secondary stimuli by participants and their volitional action or agency. While subsequent chapters explore shifts in the overall structure of participant activity in alignment with concepts of relational and transformative agency, the evolution of these tools, based on the novice status of the participants, also led to an increase in instrumental agency.  This instrumental proficiency was required before the rich set of interactions based on peer learning and other social coding processes could emerge in playtesting practices. Instrumental agency can be seen as the base of a hierarchy of agency, in other words, that other dimensions of agency may need to be built on this one. This foundational agentic level is further explored in relation to other research in the following section.
 
 <!-- DBR and affordances explored as networked affordances align with tools not only as technical or perceptual affordances but also mediation using concepts and more social practices or repertoires in CHAT [@barab_curriculum-based_2006]. -->
 
-<!-- **Comparing to UMC,  Microworlds & constructionist design principles** -->
+#### **Comparing to UMC,  Microworlds & constructionist design principles**
 
 
 <!-- MOVED INTEGRATE
@@ -571,7 +541,8 @@ However, the use of an authentic coding language in the form of javascript, and 
 <!-- **tsp**
 Additionally, the concept of task specific programming language within that process is relevant as affordances in my design are chosen not only to impact on the game, but also to build familiarity with code structures. -->
 
-<!-- **the potentially awesome impact of lifting the lid on authentic technologies** -->
+#### **the potentially awesome impact of lifting the lid on authentic technologies**
+
 
 Addressing authenticity in more detail, it is valuable to re-examine the factors driving my choice of JavaScript and Phaser, a professional, open-source game-making framework. Specifically, this choice relates to the potentially empowering impact of exposing participants to authentic technologies and concepts in hands-on, exploratory processes. Ratto [-@ratto_critical_2011] discusses this through critical making, a process that playfully brings forward Latour's [-@weibel_making_2005; -@latour_cautious_2008] ideas of shifting from matters of fact to matters of concern by revealing taken-for-granted artefacts as deliberately designed objects. This was evident in conversations between participants where they expressed a sense of inspiration or engagement with previously unknown technologies. For instance, exchanges demonstrated a growing appreciation for the complexity behind professional games, based on their perception of the effort required for their own simple game projects:  
 
@@ -580,6 +551,32 @@ Addressing authenticity in more detail, it is valuable to re-examine the factors
     Pearl: You just take things for granted don’t you?
 
 A possible drawback of using a professional tool for novice learners is the risk of culture shock when participants encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. The learning design outlined in this chapter helps address at least the beginning of this process by providing a protective, scaffolded learning environment.  
+
+
+
+
+
+#### GDP as the germ cell of this research
+
+<!-- ON THE PROCESS OF THIS Study
+HOW THIS IS A USEFUL PRODUCT -> AS PER dbr
+HOW ALSO AN EMERGENT GERM CELL. An experiment, open ended. -->
+
+
+
+The following section makes a parallel between the utility of germ cell concepts and so-called strong concepts or intermediate knowledge in design theory [@hook_strong_2012; @barendregt_intermediate-level_2018].
+
+MOVE
+Most specifically relevant to this section, is a structural feature (from research on design patterns), of the utility of a strongly coupled link between observable game features, a description of the design structure and resources to facilitate implementation in the target code environment.
+
+
+Sign post, Chapter 7 explores this aspect in relation to data on use of GDPs.
+
+
+The process of rising to the concrete via a germ cell concept is a powerful analytical and developmental tool [-@engestrom_embodied_2012]. In seeking the germ cell, the researcher explores complex, messy concrete processes over time to discern overarching concerns that can be expressed as a prototypical abstract germ cell concept. For this learning design, the concept and pedagogy of working with game design patterns (GDPs) emerged not only as an object of activity on a more granular scope than is typical but also as a germ cell concept valuable to both participants and facilitators. I continue the analysis of the orienting practice of GDPs as a germ cell concept in the following chapter.
+
+In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stepped, stage-based approach. Stepwise approaches introduce code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. While the initial use of GDPs in P1 was piecemeal, by P2, a more structured, stepwise approach had been implemented for participants as part of several guiding activities. GDPs were first identified through playing games in an activity adapted from Moveable Game Jams (ensure this is described or linked to) and were used as a list of features serving as a mediating planning tool. In P2, GDPs were incorporated as affordances into a starter game template, initially highlighted via facilitator interaction and later as the guiding principle of _quick start cards_ to scaffold modifications to the code template. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation. In line with understandings of DBR research outputs, the identification and use of these patterns as research findings would be expressed as a set of "tentative generalisations" in the form of design heuristics drawn from the analysis of concrete practices [@hoadley_design-based_2022, p.215].
+
 
 <!--
 REMOVED - ADD BACK IN LATER?
@@ -590,14 +587,20 @@ REMOVED - ADD BACK IN LATER?
 
 
 
-<!-- NOTE - DROP - MAKE MORE DIRECT
-While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
+### Summary and link to next chapter/s
+
+This chapter has explored the iterative development of the learning design, focusing on resolving barriers to coding and aligning with existing research principles, particularly the use-modify-create (UMC) process and constructionism. It emphasized the potential and challenges of leveraging professional tools within scaffolded environments, underscoring the pivotal role of learner-led design decisions in motivating coding practices and fostering social collaboration.
+It also described the emergence of GDP use as a reoccurring feature guiding goal formation and  structuring of supporting resources and advanced this as a germ cell of the emerging pegagogy.
+
+I have designed, introduced and revised a technology based set of tools in a process aligned with broad definitions of DBR. Using the techniques  DBR in the focus of documenting the learning desing via a design narrative and of AT in analysis of tensions and congruencies between systemic elements and attempts to resolve those tensions.
+
+SOME OF THIS IS ABOVE - EDIT DOWN
+The emergence of a collection GDPs was not known before the process of working with participants began reflecting the previous chapters characterision of DBR as as open and risky in nature,  requiring me to rapidly generate new tools in response. Certain factors helped address the risk posed by the incomplete nature of the learing design, namely a tenatious group of participants in P1, and my existing experience of similar learnign environmnet participants built in previous encounters. The input of families as a responsive testing group and as detailed above, as active inputters to the evolving pedagogical approach was significant. As such, while this aspect is not extensively explored in this study, I propose there is significant potential in the input of home educating families as a consituant part in collaborative design based approaches to  uncover exisiting, situated repetoires in a way that can shape emergent practices in new learning expereiences. Specifically potential to can inform design  to produce tools and pedagogies aims which can help other facilitators seed productive community activity in other learning settings. I return to this subject in the conclusion of this thesis.
 
 
-<!-- ### Summary and link to next chapter/s -->
 
 
-This chapter has explored the iterative development of the learning design, focusing on resolving barriers to coding and aligning with existing research principles, particularly the use-modify-create (UMC) process and constructionism. It emphasized the potential and challenges of leveraging professional tools within scaffolded environments, underscoring the pivotal role of learner-led design decisions in motivating coding practices and fostering social collaboration. Two key lines of inquiry emerged and are explored in subsequent chapters. Chapter 7 examines the impact of emerging community processes on participants’ agency, while the next chapter employs video data to describe and analyse the diverse applications of GDPs. This analysis further illuminates in particular the cultural and social dimensions of game-making as a collaborative activity.
+The next chapter employs video data to describe and analyse the diverse applications of GDPs. This analysis further illuminates in particular the cultural and social dimensions of game-making as a collaborative activity.
 
 
 
