--- a/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
@@ -1,6 +1,6 @@
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
-    -   [Research Questions Nov 2024](#research-questions-nov-2024)
+    -   [Research Questions April 2025](#research-questions-april-2025)
     -   [Additional information to help
         reviewers](#additional-information-to-help-reviewers)
     -   [Chapter Introduction](#chapter-introduction)
@@ -29,6 +29,15 @@
                 -   [Use of side missions to encourage varied creative
                     practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
+        -   [**Comparing to UMC, Microworlds & constructionist design
+            principles**](#comparing-to-umc-microworlds-constructionist-design-principles)
+        -   [**the potentially awesome impact of lifting the lid on
+            authentic
+            technologies**](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
+        -   [GDP as the germ cell of this
+            research](#gdp-as-the-germ-cell-of-this-research)
+        -   [Summary and link to next
+            chapter/s](#summary-and-link-to-next-chapters)
     -   [Parking Lot](#parking-lot)
         -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
             -   [MOVED LINK - Applying activity theory to surface
