--- a/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
@@ -27,8 +27,8 @@
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
         -   [GDPs can facilitate the use of wider funds of knowledge and
             interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
-        -   [Evolution and propagation of GDPs concepts during
-            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
+        -   [Evolution and propagation of GDPs
+            concepts](#evolution-and-propagation-of-gdps-concepts)
             -   [Emergent social and cultural activities in evolving
                 idioculture](#emergent-social-and-cultural-activities-in-evolving-idioculture)
     -   [Discussion](#discussion)
@@ -38,6 +38,7 @@
             activity](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity)
         -   [Expanded object in terms of motivation - fluency towards
             agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
+        -   [Link section](#link-section)
     -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
