GDPs role, objective or mediational strategy?

--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -505,7 +505,7 @@ While this provides an incomplete picture of the missions and drama process, due
 ## Chapter Discussion
 
 
-CREATE A NEW SUMMARY OF DISCSSION HERE. 
+CREATE A NEW SUMMARY OF DISCSSION HERE.
 
 MOVE TO CONCLUSION?
 This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored initially focused on technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving the varied competencies needed to complete the text coding of a multi-media project.
@@ -580,14 +580,21 @@ A possible drawback of using a professional tool for novice learners is the risk
 
 
 
-#### GDP as the germ cell of this research
+#### The position of GDPs in Activity Systems as the germ cell of this research
 
 <!-- ON THE PROCESS OF THIS Study
 HOW THIS IS A USEFUL PRODUCT -> AS PER dbr
 HOW ALSO AN EMERGENT GERM CELL. An experiment, open ended. -->
 
 
+ARE DIAGRAMS HELPFUL HERE.
 
+The position of GDPs in Activity Systems is complex. As framed as the start of the chapter the use of GDPs form is a part of an emerging object of activity. At the narrower level of activity, the implementation of the GDP into the code acts a a prinicple an objective and motivation. In addition, video observations showed GDP concepts being used as mediational strategies in varied ways.
+IS THERE ONE ABOVE?
+Thus the next chapter explores this aspect in more detail.
+
+
+DOES IT?
 The following section makes a parallel between the utility of germ cell concepts and so-called strong concepts or intermediate knowledge in design theory [@hook_strong_2012; @barendregt_intermediate-level_2018].
 
 MOVE
@@ -621,10 +628,9 @@ I have designed, introduced and revised a technology based set of tools in a pro
 SOME OF THIS IS ABOVE - EDIT DOWN
 The emergence of a collection GDPs was not known before the process of working with participants began reflecting the previous chapters characterision of DBR as as open and risky in nature,  requiring me to rapidly generate new tools in response. Certain factors helped address the risk posed by the incomplete nature of the learing design, namely a tenatious group of participants in P1, and my existing experience of similar learnign environmnet participants built in previous encounters. The input of families as a responsive testing group and as detailed above, as active inputters to the evolving pedagogical approach was significant. As such, while this aspect is not extensively explored in this study, I propose there is significant potential in the input of home educating families as a consituant part in collaborative design based approaches to  uncover exisiting, situated repetoires in a way that can shape emergent practices in new learning expereiences. Specifically potential to can inform design  to produce tools and pedagogies aims which can help other facilitators seed productive community activity in other learning settings. I return to this subject in the conclusion of this thesis.
 
+As expressed in the discussion, the role of GDPs within activity is complex. The next chapter employs video data to describe and analyse the diverse applications of GDPs.
 
-
-
-The next chapter employs video data to describe and analyse the diverse applications of GDPs. This analysis further illuminates in particular the cultural and social dimensions of game-making as a collaborative activity.
+<!-- This analysis further illuminates in particular the cultural and social dimensions of game-making as a collaborative activity. -->
 
 
 
